Fixed z-indexing of embeded YouTube videos

--- a/resources/sass/markdown.scss
+++ b/resources/sass/markdown.scss
@@ -64,16 +64,11 @@
     }
 
     .video {
-        position: relative;
+        @apply relative h-0 z-0;
         padding-bottom: 56.25%; /* 16:9 */
-        height: 0;
     }
 
     .video iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        @apply absolute top-0 left-0 w-full h-full;
     }
 }
